Make banner changeable in real time on profile page!!

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -3464,6 +3464,7 @@ input.upload-custom-banner {
     position: absolute;
     right: 0;
     top: 0;
+    height: 500px;
 }
 /*-- slider --*/
 .banner-profile .rslides {
@@ -3490,6 +3491,7 @@ input.upload-custom-banner {
 	width: 100%;
 	left: 0;
 	top: 0;
+    z-index: 99;
 }
 .rslides li:first-child {
 	position: relative;
@@ -3917,6 +3919,17 @@ hr{
 	.banner-profile-info {
 	margin: 250px 0 0 390px;
 	}
+    input.upload-custom-banner {
+    cursor: pointer;
+    margin: 0;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    padding: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 500px;
+}
 }
 
 @media (max-width: 1366px) {
@@ -3966,6 +3979,17 @@ hr{
 }
 	.banner-profile-info {
     margin: 180px 0 0 262px;
+}
+input.upload-custom-banner {
+    cursor: pointer;
+    margin: 0;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    padding: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 500px;
 }
 }
 
@@ -4048,6 +4072,9 @@ hr{
 	.banner-profile-info {
     margin: 180px 0 0 200px;
 }
+input.upload-custom-banner {
+    display: none;
+}
 	.mygallery img.img-responsive {
     height: 245px;
 }
@@ -4094,6 +4121,10 @@ hr{
 	.banner-profile {
 	min-height:360px;
 }
+
+input.upload-custom-banner {
+    display: none;
+}
 	.banner-profile .rslides {
     height: 360px;
 }
@@ -4115,6 +4146,9 @@ hr{
 	.banner-profile-info h3 {
 	font-size:35px;
 }
+input.upload-custom-banner {
+    display:none;
+}
 	.banner-profile-info p {
 	font-size:19px;
 }
@@ -4127,6 +4161,9 @@ hr{
 }
 
 @media (max-width: 640px) {
+input.upload-custom-banner {
+    display:none;
+}
 	.banner-profile-info {
     margin: 45px 0 0 165px;
 }
@@ -4151,6 +4188,10 @@ hr{
 	.content-img {
     height: 350px;
 }
+
+input.upload-custom-banner {
+    display: none;
+}
 	.close-content {
 	top:-17px;
 }
@@ -4162,6 +4203,10 @@ hr{
 @media (max-width: 568px){
 	.banner-profile {
     min-height: 265px;
+}
+
+input.upload-custom-banner {
+    display: none;
 }
 	.banner-profile .rslides {
     height: 265px;
