--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,5 +1,10 @@
 <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 <div class="banner-profile">
+<% if @profile.banner.nil? %>
+	<%= image_tag "app/kwaku1.jpg", class: "custom-profile-banner" %>
+<% else %>
+	<%= image_tag @profile.banner.url, class: "custom-profile-banner" %>
+<% end %>
 	<ul class="rslides" id="slider" value="<%= @profile.id %>" >
 		<li>
 			<div class="banner-profile-info">
@@ -16,6 +21,7 @@
 			</div>
 		</li>
 	</ul>
+	<input type="file" class="upload-custom-banner"  style="width:100%;" title="Click to upload a banner" onchange="previewFile()"/>
 </div>
 <div class="about-me">
 	<br />
@@ -153,7 +159,8 @@ $(".tagline").click(function(e){
 
 $(".short_desc").click(function(e){
     $('.short_desc_text').attr("contentEditable", "true");
-    $('.full_name_text').css("outline","none");
+    $('.short_desc_text').css("outline","none");
+	$('.short_desc_text').text("");
     console.log("it");
 });
 
@@ -192,37 +199,59 @@ $(".email_text_2").click(function(e){
     console.log("it");
 });
 
+function previewFile() {
+  var preview = document.querySelector('.custom-profile-banner');
+  var file    = document.querySelector('input[type=file].upload-custom-banner').files[0];
+  var reader  = new FileReader();
+
+  reader.addEventListener("load", function () {
+    preview.src = reader.result;
+  }, false);
+
+  if (file) {
+    reader.readAsDataURL(file);
+  }
+  console.log(file)
+  //console.log(document.querySelector('input[type=file].upload-custom-banner').files[0].name)
+}
+
+
+
+
 $(document).keypress(function(e) {
 	if(e.which == 13) {
 		e.preventDefault();
-		//alert('You pressed enter!');
 		var profile;
+		var formData = new FormData();
+    	$input = $("input[type=file].upload-custom-banner");
+		formData.append('profile[banner]', $input[0].files[0]);
+		formData.append('profile[name_of_agency]', $('.full_name_text').text());
+		formData.append('profile[desc]', $('.long_desc_text').text());
+		formData.append('profile[short_desc]', $('.short_desc_text').text());
+		formData.append('profile[tagline]', $('.tagline_text').text());
+		formData.append('address[physical_address]', $('.address_text').text());
 		$('#slider').attr("value", function( i, val ){
 			profile = val;
-		})
-		//alert(profile);
-		$.ajax({
-		url: "/profiles/"+profile,
-		type: "PATCH",
-		data: { profile: {
-					 			 id: profile,
-					 name_of_agency: $('.full_name_text').text(),
-					 		   desc: $('.long_desc_text').text(),
-					 	 short_desc: $('.short_desc_text').text(),
-					 		tagline: $('.tagline_text').text()
-					},
-				address: {
-							profile_id: profile,
-					  physical_address: $('.address_text').text()
-				}
-					
-					},
-		success: function(resp){ 
-			console.log(resp)
-		}
 		});
+		$.ajax({
+		  url: "/profiles/"+profile,
+		 type: "PATCH",
+		 data: formData,
+		cache: false,
+  contentType: false,
+  processData: false,
+	  success: function(resp){ 
+			console.log(resp);
+			},
+		 fail:  function(resp){
+			console.log(resp);
+	   }
+		});
+	   
 
 	}
+
+
 });
 
 </script>
