--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -1678,10 +1678,7 @@ h2.resp-accordion:first-child {
     font-size: 24px;
 }
 .tab-content {
-	padding: 15px;
-	padding-top: 0px; 
-	padding-left: 0px; 
-	padding-bottom: 0px;
+	padding: 0px;
 	border-top: none;
 }
 .nav-tabs {
@@ -1692,7 +1689,7 @@ h2.resp-accordion:first-child {
 	margin-bottom: -1px;
 }
 .nav-tabs > li > a {
-	background: #f8f8f8;
+	background: #ffffff;
 	margin-right: 3px;
 	border: none;
 	border-radius: 0;
@@ -1712,13 +1709,13 @@ h2.resp-accordion:first-child {
 }
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
 	color: #fff;
-	background-color:#FAB005;
+	background-color:#e67e22;
 	border: none;
 	border-radius: 0;
 }
 .nav-tabs > li > a:hover, .nav-tabs > li > a:focus {
 	color: #fff;
-	background-color:#FAB005;
+	background-color:#e67e22;
 }
 .nav-tabs > li > a i {
 	font-size: 32px;
@@ -1853,7 +1850,8 @@ section#tables  p {
   background-color: #ffffff;
 }
 .nav-tabs {
-  margin-bottom: 1em;
+  margin-bottom: 0em;
+  margin-top: 0em;
 }
 .alert {
   font-size: 0.85em;
@@ -1928,7 +1926,7 @@ a#myTabDrop1 {
 }
 .panel-default>.panel-heading {
     color: #222;
-    background-color: #FFFFFF;
+    background-color: #fff;
     border-color: #FFF;
 	text-transform:capitalize;
 }
@@ -1955,10 +1953,10 @@ a#myTabDrop1 {
     margin-left: 17px;
     padding: 0px 15px 20px;
     line-height: 30px;
-}
+} /*
 .panel-heading {
 	padding: 20px 15px;
-}
+} */
 .panel-group .panel+.panel {
     margin-top: 0px;
 }
@@ -3720,6 +3718,14 @@ span.shortline5 {
 	margin-top: 3%;
 }
 /*-- /About me--*/
+
+/* -- new style for the nav div -- */
+.navigation-div {
+  border: 1px solid white;
+  background-color: white;
+}
+/* -- new style for the nav div -- */
+
 /*-- Portfolio --*/
 .myportfolio {
 	padding:0;
