--- a/app/views/mains/search.html.erb
+++ b/app/views/mains/search.html.erb
@@ -58,7 +58,7 @@
 					</div>
 					<div class="col-md-7 span-1 ">
 						<h3><%= service.profile.name_of_agency %> </h3>
-						<p class="in-para"> <%= service.profile.short_desc %></p>
+						<p class="in-para"> <%= service.profile.desc  %></p>
 						<div class="price_single">
 							Minimum Price:<span class="reducedfrom "><%= service.price %></span>
 						
