Comments out of the index page

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -1953,10 +1953,10 @@ a#myTabDrop1 {
     margin-left: 17px;
     padding: 0px 15px 20px;
     line-height: 30px;
-} /*
-.panel-heading {
-	padding: 20px 15px;
-} */
+}
+.bottom-div {
+	background-color: #f2f2f2;
+}
 .panel-group .panel+.panel {
     margin-top: 0px;
 }
