Fixed most of the issues with the landing page

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -21,7 +21,6 @@ p,label{
 ul{
 	margin:0;
 	padding:0;
-  margin-top: 2.0em;
 }
 
 /*--popup--*/
@@ -99,6 +98,9 @@ button.close.close-w3 {
 /*----*/
 img.img-head {
 	top:0;
+}
+.logo-padd {
+  padding: 1em 1em 1em 1em;
 }
 .hyper {
   margin: auto;
