--- a/app/views/mains/index.html.erb
+++ b/app/views/mains/index.html.erb
@@ -23,6 +23,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	});
 </script>
 
+
 <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 <link href='//fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
 <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
@@ -109,7 +110,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<div class="col-md-2 col-md-offset-1">
 			<div class="col-m">
 				<a href="#" data-toggle="modal" data-target="#myModal17" class="offer-img">
-					<%= image_tag "app/banner.png", class: "img-responsive" %>
+					<%= image_tag "app/banner.png", class: "img-responsive blink_me" %>
 				</a>
 				<div class="mid-1">
 					<div class="women">
@@ -462,7 +463,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
       				<div class="modal-content">
         				<div class="modal-header the-modal-header">
           					<button type="button" class="close" data-dismiss="modal">&times;</button>
-          					<%= image_tag "app/logo.png", class: "img-head" %>
+          					<%= image_tag "app/logo1.png", class: "img-head" %>
           					<h3 class="modal-title">Register Today</h3>
         				</div>
         				<div class="modal-body md-body">
@@ -502,7 +503,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
       				<div class="modal-content">
         				<div class="modal-header the-modal-header">
           					<button type="button" class="close" data-dismiss="modal">&times;</button>
-          					<%= image_tag "app/logo.png", class: "img-head" %>
+          					<%= image_tag "app/logo1.png", class: "img-head" %>
           					<h3 class="modal-title">Log in</h3>
         				</div>
         				<div class="modal-body md-body">
