--- a/app/views/layouts/no_search.html.erb
+++ b/app/views/layouts/no_search.html.erb
@@ -4,7 +4,7 @@
 <title>Find supplier listings for all your event needs</title>
 <%= csrf_meta_tags %>
 
-<!-- for-mobile-apps -->
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta property="og:title" content="Vide" />
@@ -13,14 +13,6 @@
 function hideURLbar(){ window.scrollTo(0,1); } </script>
 <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-<!-- //for-mobile-apps -->
-<!--<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
-<link href="css/style.css" rel='stylesheet' type='text/css' />-->
-<!-- js -->
-
-<!-- //js <script src="js/jquery-1.11.1.min.js"></script> -->
-<!-- start-smoth-scrolling <script type="text/javascript" src="js/move-top.js"></script>
-<script type="text/javascript" src="js/easing.js"></script> -->
 
 <script type="text/javascript">
 	jQuery(document).ready(function($) {
@@ -30,14 +22,12 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		});
 	});
 </script>
-<!-- start-smoth-scrolling -->
-<!--<link href="css/font-awesome.css" rel="stylesheet">--> 
 <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 <link href='//fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
 <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-<!--- start-rate -->
+
 <script src="js/jstarbox.js"></script>
-	<!--<link rel="stylesheet" href="css/jstarbox.css" type="text/css" media="screen" charset="utf-8" />-->
+	
 		<script type="text/javascript">
 			jQuery(function() {
 			jQuery('.starbox').each(function() {
@@ -59,54 +49,21 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			});
 		});
 		</script>
-<!---//End-rate -->
 
 </head>
 <body>
-<!--<a href="offer.html"><img src="images/logo.png" class="img-head" alt=""></a>-->
+
 <div class="header">
-			<div class="container-fluid main-nav-shadow">
-				<div class="row">
-					<div class="col-md-2" style="">
-    					<%= image_tag "app/logo.png", class: "img-head" %>
-    				</div>
-    				<!-- ###################################### -->
-    				<div class="col-md-8 the-bar-width"><!--   /////  This had to be taken away for the no-search function
-						<form action="#" method="post">
-						<div>
-							<div class="col-md-6 col-sm-4 col-xs-12">
-								<input type="text" placeholder="Supplier or Service" name="Search" />
-							</div>
-							<div class="col-md-4 col-sm-4 hidden-xs">
-								<input type="text" placeholder="Location" name="location" />
-							</div>
-							<div class="col-md-2 col-sm-4 col-xs-12" align="center">
-								<button class="search-no-border" type="submit">Search</button>
-							</div>
-						</div>
-						</form>  -->
-					</div>	
-					<!-- ###################################### -->
-					<div class="col-md-2">
-    					<ul class="card">
-							<!-- <li><a href="wishlist.html" ><i class="fa fa-heart" aria-hidden="true"></i>Wishlist</a></li> -->
-							<!-- Have to put a blog link here -->
-							<li><a href=".lgmd" data-toggle="modal"><i class="fa fa-user" aria-hidden="true"></i>Log in</a></li>
-							<li><a href=".sumd" data-toggle="modal"><i class="fa fa-user" aria-hidden="true"></i>Sign Up</a></li>
-							<!--<li><a href="about.html" ><i class="fa fa-file-text-o" aria-hidden="true"></i>Order History</a></li>
-							<li><a href="shipping.html" ><i class="fa fa-ship" aria-hidden="true"></i>Shipping</a></li>-->
-						</ul>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-
-
-				<!-- The navigation bar thingy ends here -->
-			<!--<div class="logo">
-				<h1 ><a href="index.html"><a href=""><%= image_tag "app/logo.png", class: "img-head" %><span>For all your event listing needs</span></a></h1>   <!-- Probably make the name orange, create a panel and switch tab around ///////        Done     -->
-			<!--</div>-->
+			<div class="container-fluid main-nav-shadow logo-padd">
+				<a href="/">
+    				<%= image_tag "app/logo1.png", class: "img-head" %>
+    			</a>
+    			<ul class="card">
+					<li><a href=".lgmd" data-toggle="modal"><i class="fa fa-user" aria-hidden="true"></i>Log in</a></li>
+					<li><a href=".sumd" data-toggle="modal"><i class="fa fa-user" aria-hidden="true"></i>Sign Up</a></li>
 					
-		</div>			
+				</ul>
+    		</div>
 </div><br /><br />
 
 
@@ -137,20 +94,20 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					</div>
 					<div class="col-md-12">
 						<div class="col-md-4 fo-grid1">
-							<p><i class="fa fa-home" aria-hidden="true"></i>No.32 Aluguntugui Street, East Legon, Accra</p>
+							<p><i class="fa fa-home" aria-hidden="true"></i>No. 20 Aluguntugui Street, East Legon, Accra</p>
 						</div>
 						<div class="col-md-4 fo-grid1">
-							<p><i class="fa fa-phone" aria-hidden="true"></i>+1234 758 839 , +1273 748 730</p>	
+							<p><i class="fa fa-phone" aria-hidden="true"></i>+254 716 808880, +233 50 982 5831, +233 26 288 9802</p>	
 						</div>
 						<div class="col-md-4 fo-grid1">
 							<p><a href="mailto:info@example.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>info@evventor.com</a></p>
 						</div>
 					</div>
 					<div class="col-md-12" align="center">
+						<br /><br />
 						<ul class="social-for">
 							<li><a href="#" class=" face"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="#" class=" twi"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-							<li><a href="#" class=" pin"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
 							<li><a href="#" class=" dri"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
