--- a/app/views/layouts/search_bar.html.erb
+++ b/app/views/layouts/search_bar.html.erb
@@ -13,15 +13,6 @@
 function hideURLbar(){ window.scrollTo(0,1); } </script>
 <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-<!-- //for-mobile-apps -->
-<!--<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
-<link href="css/style.css" rel='stylesheet' type='text/css' />-->
-<!-- js -->
-
-<!-- //js <script src="js/jquery-1.11.1.min.js"></script> -->
-<!-- start-smoth-scrolling <script type="text/javascript" src="js/move-top.js"></script>
-<script type="text/javascript" src="js/easing.js"></script> -->
-
 <script type="text/javascript">
 	jQuery(document).ready(function($) {
 		$(".scroll").click(function(event){		
@@ -30,13 +21,10 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		});
 	});
 </script>
-<!-- start-smoth-scrolling -->
-<!--<link href="css/font-awesome.css" rel="stylesheet">--> 
 <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 <link href='//fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
 <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-<!--- start-rate -->
-	<!--<link rel="stylesheet" href="css/jstarbox.css" type="text/css" media="screen" charset="utf-8" />-->
+
 		<script type="text/javascript">
 			jQuery(function() {
 			jQuery('.starbox').each(function() {
@@ -58,7 +46,6 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			});
 		});
 		</script>
-<!---//End-rate -->
 
 </head>
 <body>
@@ -69,7 +56,6 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					<div class="col-md-2" style="">
     					<%= image_tag "app/logo.png", class: "img-responsive" %>
     				</div>
-    				<!-- ###################################### -->
     				<div class="col-md-8 the-bar-width">
 						<%= form_tag({ controller: :mains, action: :search }, :method => "get", id: "search-form") do %>
 						<div class="row">
@@ -85,22 +71,16 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 						</div>
 						<% end %>
 					</div>	
-					<!-- ###################################### -->
 					<div class="col-md-2">
     					<ul class="card">
-							<!-- <li><a href="wishlist.html" ><i class="fa fa-heart" aria-hidden="true"></i>Wishlist</a></li> -->
-							<!-- Have to put a blog link here -->
 							<li><a href=".lgmd" data-toggle="modal"><i class="fa fa-user" aria-hidden="true"></i>Log in</a></li>
 							<li><a href=".sumd" data-toggle="modal"><i class="fa fa-user" aria-hidden="true"></i>Sign Up</a></li>
-							<!--<li><a href="about.html" ><i class="fa fa-file-text-o" aria-hidden="true"></i>Order History</a></li>
-							<li><a href="shipping.html" ><i class="fa fa-ship" aria-hidden="true"></i>Shipping</a></li>-->
 						</ul>
 					</div>
     			</div>
     		<br />
 			</div>
 		</div>
-  <!-- Nav bar ends here -->
 
 
 
@@ -130,20 +110,20 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					</div>
 					<div class="col-md-12">
 						<div class="col-md-4 fo-grid1">
-							<p><i class="fa fa-home" aria-hidden="true"></i>No.32 Aluguntugui Street, East Legon, Accra</p>
+							<p><i class="fa fa-home" aria-hidden="true"></i>No. 20 Aluguntugui Street, East Legon, Accra</p>
 						</div>
 						<div class="col-md-4 fo-grid1">
-							<p><i class="fa fa-phone" aria-hidden="true"></i>+1234 758 839 , +1273 748 730</p>	
+							<p><i class="fa fa-phone" aria-hidden="true"></i>+254 716 808880, +233 50 982 5831, +233 26 288 9802</p>	
 						</div>
 						<div class="col-md-4 fo-grid1">
 							<p><a href="mailto:info@example.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>info@evventor.com</a></p>
 						</div>
 					</div>
 					<div class="col-md-12" align="center">
+						<br /><br />
 						<ul class="social-for">
 							<li><a href="#" class=" face"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 							<li><a href="#" class=" twi"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-							<li><a href="#" class=" pin"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
 							<li><a href="#" class=" dri"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
@@ -157,15 +137,10 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	</div>
 </div>
 </div>
-<!-- //footer-->
-
-<!-- Modal for signup -->
 		<div class="container">
-  			<!-- Modal -->
   			<div class="modal fade sumd" id="signupModal" role="dialog">
     			<div class="modal-dialog">
     
-      			<!-- Modal content-->
       				<div class="modal-content">
         				<div class="modal-header the-modal-header">
           					<button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -201,14 +176,9 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
   			</div>
   
 		</div>
-<!-- Modal -->
-<!-- Modal for login -->
 		<div class="container">
-  			<!-- Modal -->
   			<div class="modal fade lgmd" id="loginModal" role="dialog">
     			<div class="modal-dialog">
-    
-      			<!-- Modal content-->
       				<div class="modal-content">
         				<div class="modal-header the-modal-header">
           					<button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -252,6 +222,5 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
   			</div>
   
 		</div>
-<!-- Modal -->
 
 	<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
