--- a/app/views/web/login.html
+++ b/app/views/web/login.html
@@ -1,28 +1,21 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html>
 <head>
 <title>Find supplier listings for all your event needs</title>
-<!-- for-mobile-apps -->
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta property="og:title" content="Vide" />
 <meta name="keywords" content="Search and find suppplier listings for all your event needs" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!-- //for-mobile-apps -->
+
 <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
-<!-- Custom Theme files -->
+
 <link href="css/style.css" rel='stylesheet' type='text/css' />
-<!-- js -->
+
    <script src="js/jquery-1.11.1.min.js"></script>
-<!-- //js -->
-<!-- start-smoth-scrolling -->
+
 <script type="text/javascript" src="js/move-top.js"></script>
 <script type="text/javascript" src="js/easing.js"></script>
 <script type="text/javascript">
@@ -33,11 +26,11 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		});
 	});
 </script>
-<!-- start-smoth-scrolling -->
+
 <link href="css/font-awesome.css" rel="stylesheet"> 
 <link href='//fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 <link href='//fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
-<!--- start-rate---->
+
 <script src="js/jstarbox.js"></script>
 	<link rel="stylesheet" href="css/jstarbox.css" type="text/css" media="screen" charset="utf-8" />
 		<script type="text/javascript">
@@ -61,17 +54,17 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			});
 		});
 		</script>
-<!---//End-rate---->
+
 
 </head>
 <body>
-<!--<a href="offer.html"><img src="images/logo.png" class="img-head" alt=""></a>-->
+
 <div class="header">
 
 		<div class="container">
 
 
-			<!--The nav bar starts here-->
+			
 				<div class="nav-top">
 					<nav class="navbar navbar-default">
 					
@@ -116,7 +109,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 										
 										</div>
 										<div class="col-sm-4 w3l">
-											<!--<a href="kitchen.html"><img src="images/me.png" class="img-responsive" alt=""></a>-->
+											
 										</div>
 										<div class="clearfix"></div>
 									</div>	
@@ -157,7 +150,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 											</ul>
 										</div>
 										<div class="col-sm-3 w3l">
-											<!--<a href="care.html"><img src="images/me1.png" class="img-responsive" alt=""></a>-->
+											
 										</div>
 										<div class="clearfix"></div>
 									</div>	
@@ -187,50 +180,39 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 										
 										</div>
 										<div class="col-sm-4 w3l">
-											<!--<a href="hold.html"><img src="images/me2.png" class="img-responsive" alt=""></a>-->
+											
 										</div>
 										<div class="clearfix"></div>
 									</div>	
 								</ul>
 							</li>
 							
-							<!--<li><a href="codes.html" class="hyper"> <span>Codes</span></a></li>-->
 							<li><a href="contact.html" class="hyper"><span>Contact Us</span></a></li>
 						</ul>
 					</div>
 					</nav>
 					 <div class="cart" >
 					
-						<!--<span class="fa fa-shopping-cart my-cart-icon"><span class="badge badge-notify my-cart-badge"></span></span>-->
+						
 						<ul class="card">
 							<li><a href="wishlist.html" ><i class="fa fa-heart" aria-hidden="true"></i>Wishlist</a></li>
 							<li><a href="login.html" ><i class="fa fa-user" aria-hidden="true"></i>Login</a></li>
 							<li><a href="register.html" ><i class="fa fa-arrow-right" aria-hidden="true"></i>Sign up</a></li>
-							<!--<li><a href="about.html" ><i class="fa fa-file-text-o" aria-hidden="true"></i>Order History</a></li>
-							<li><a href="shipping.html" ><i class="fa fa-ship" aria-hidden="true"></i>Shipping</a></li>-->
+							
 						</ul>	
 					</div>
 					<div class="clearfix"></div>
 				</div>
 			
-			<!-- The navigation bar thingy ends here -->
+			
 				<br /><br />
 			<div class="logo">
-				<h1 ><a href="index.html"><a href=""><img src="images/logo.png" class="img-head" alt=""><span>For all your event listing needs</span></a></h1>   <!-- Probably make the name orange, create a panel and switch tab around ///////        Done     -->
+				<h1 ><a href="index.html"><a href=""><img src="images/logo.png" class="img-head" alt=""><span>For all your event listing needs</span></a></h1> 
 			</div>
 					
 		</div>			
 </div><br /><br />
-  <!---->
- <!--banner-->
-<!-- <div class="banner-top">
-	<div class="container">
-		<h3 >Login</h3>
-		<h4><a href="index.html">Home</a><label>/</label>Login</h4>
-		<div class="clearfix"> </div>
-	</div>
-</div> -->
-<!--login-->
+ 
 
 	<div class="login">
 	
@@ -260,7 +242,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				</div>
 			</div>
 		</div>
-<!--footer-->
+
 <div class="footer">
 	<div class="container">
 		<div class="col-md-3 footer-grid">
@@ -275,19 +257,16 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="kitchen.html">Corporate</a></li>
 				<li><a href="care.html">Casual</a></li>
-				<li><a href="hold.html">Personal</a></li>						 
-				<!--<li><a href="codes.html">Short Codes</a></li>-->
+				<li><a href="hold.html">Personal</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</div>
 		<div class="col-md-3 footer-grid ">
 			<h3>Customer Services</h3>
 			<ul>
-				<!--<li><a href="shipping.html">Shipping</a></li>-->
 				<li><a href="terms.html">Terms & Conditions</a></li>
 				<li><a href="faqs.html">Faqs</a></li>
-				<li><a href="contact.html">Contact</a></li>
-				<!--<li><a href="offer.html">Online Shopping</a></li>-->					 
+				<li><a href="contact.html">Contact</a></li>				 
 				 
 			</ul>
 		</div>
@@ -329,26 +308,16 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		</div>
 	</div>
 </div>
-<!-- //footer-->
-<!-- smooth scrolling -->
 	<script type="text/javascript">
 		$(document).ready(function() {
-		/*
-			var defaults = {
-			containerID: 'toTop', // fading element id
-			containerHoverID: 'toTopHover', // fading element hover id
-			scrollSpeed: 1200,
-			easingType: 'linear' 
-			};
-		*/								
+						
 		$().UItoTop({ easingType: 'easeOutQuart' });
 		});
 	</script>
 	<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
-<!-- //smooth scrolling -->
-<!-- for bootstrap working -->
+
 		<script src="js/bootstrap.js"></script>
-<!-- //for bootstrap working -->
+
 <script type='text/javascript' src="js/jquery.mycart.js"></script>
   <script type="text/javascript">
   $(function () {
