Fix message body showing

--- a/app/views/mains/_profile_search.html.erb
+++ b/app/views/mains/_profile_search.html.erb
@@ -1,5 +1,5 @@
 <%= link_to profile_path(item.id) do %>
-                <%= image_tag "app/kwaku.jpg", { class: "img-responsive img-fix-height", width:"492", height:"300" } %>
+                <%= image_tag "app/man.jpg", { class: "img-responsive img-fix-height", width:"492", height:"300" } %>
             <% end %>
             <div class="mid-1">
                 <div class="women">
