--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -3746,6 +3746,23 @@ span.shortline5 {
 }
 /* -- new style for the nav div -- */
 
+/* The inbox and reply message */
+.messaging-body {
+  float: right;
+}
+.textbox-body {
+  width: 300px;
+  height: 100px;
+}
+.textbox-button {
+  width: 100px;
+  height: 41px;
+  background-color: #e67e22;
+  color: #ffffff;
+  border: none;
+}
+/* The inbox and reply message */
+
 /*-- Portfolio --*/
 .myportfolio {
 	padding:0;
