--- a/app/views/layouts/search_bar.html.erb
+++ b/app/views/layouts/search_bar.html.erb
@@ -53,8 +53,9 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<div class="header">
 			<div class="container-fluid main-nav-shadow">
 				<div class="row">
-					<div class="col-md-2" style="">
-    					<%= image_tag "app/logo.png", class: "img-responsive" %>
+					<div class="col-md-2">
+						<br /><br />
+    					<%= image_tag "app/logo1.png", class: "img-responsive" %>
     				</div>
     				<div class="col-md-8 the-bar-width">
 						<%= form_tag({ controller: :mains, action: :search }, :method => "get", id: "search-form") do %>
@@ -72,6 +73,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 						<% end %>
 					</div>	
 					<div class="col-md-2">
+						<br /><br />
     					<ul class="card">
 							<li><a href=".lgmd" data-toggle="modal"><i class="fa fa-user" aria-hidden="true"></i>Log in</a></li>
 							<li><a href=".sumd" data-toggle="modal"><i class="fa fa-user" aria-hidden="true"></i>Sign Up</a></li>
