make hompage search work well

--- a/app/views/layouts/search_bar.html.erb
+++ b/app/views/layouts/search_bar.html.erb
@@ -187,11 +187,11 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
         				</div>
         				<div class="modal-body md-body">
         					<div class="md-body-fb">
-          						<button>Log in with Facebook</button>
+          						<button onclick="window.location.href='/auth/facebook/'">Log in with Facebook</button>
           					</div>
           					<br />
           					<div class="md-body-tw">
-          						<button>Log in with Twitter</button>
+          						<button onclick="window.location.href='/auth/twitter/'">Log in with Twitter</button>
           					</div>
           					<br />
           					<div>
