--- a/app/views/profiles/_service_provider.html.erb
+++ b/app/views/profiles/_service_provider.html.erb
@@ -71,7 +71,7 @@
     				<div id="home" class="tab-pane fade in active">
       					<div class="myskills slideanim">
 							<div class="row">
-  								<div class="panel-group" id="accordion">
+  								<div class="panel-group" id="accordion"> 
 								  <% @mail_box.each do |message| %>
     								<div class="panel panel-default">
       									<div class="panel-heading">
@@ -196,7 +196,7 @@
           					<h3 class="modal-title"><%= message.body %> </h3>
         				</div>
         				<div class="modal-body md-body" align="center">
-        					<%= form_for @message, url: { controller: :messages, action: :create, id: message.sender.profile.id } do |f| %>
+        					<%= form_for @message, url: { controller: :messages, action: :create, profile_id: message.sender.profile.id } do |f| %>
         						<%= f.text_area :body, placeholder: "Message" %>
         						<br /><br /><br />
         				</div>
