--- a/app/views/mains/_service_search.html.erb
+++ b/app/views/mains/_service_search.html.erb
@@ -1,5 +1,5 @@
 <%= link_to service_path(item.id) do %>
-								<%= image_tag item.picture.large.url, { class: "img-responsive img-fix-height", width:"492", height:"300" } %>
+								<%= image_tag item.picture.standard.url, { class: "img-responsive img-fix-height", width:"492", height:"300" } %>
 							<% end %>
 							<div class="mid-1">
 								<div class="women">
@@ -33,7 +33,7 @@
 			<div class="modal-body modal-spa">
 					<div class="col-md-5 span-2">
 						<div class="item">
-							<%= image_tag item.picture.large.url, class: "img-responsive" %>
+							<%= image_tag item.picture.standard.url, class: "img-responsive" %>
 						</div>
 					</div>
 					<div class="col-md-7 span-1 ">
