--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -17,7 +17,7 @@
 			<div class="col-md-5 single-top">
 				<div class="single-w3agile">	
 					<div id="picture-frame">
-						<%= image_tag @service.picture.large.url, class: "img-responsive" %>
+						<%= image_tag @service.picture.standard.url, class: "img-responsive" %>
 					</div>
 					<script>
 						$(function() {
